# Algorithmic-work

./: BinaryTree.cpp  BinaryTree.h  CMakeLists.txt  main.cpp
